--- a/frontend/src/app/global.css
+++ b/frontend/src/app/global.css
@@ -5,6 +5,13 @@
   font-family: "Courier New", monospace;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 :root {
   --text-color: #00ff00;
   --background: #1e1e1e;
@@ -27,4 +34,7 @@
   100% {
     opacity: 0;
   }
+}
+.element {
+  scrollbar-width: none; 
 }
